# TACoS_sym_redu

./: CMakeLists.txt  controller.pbtxt
build_benchmark/: CMakeCache.txt  DartConfiguration.tcl
src/: CMakeLists.txt
src/automata/include/automata/: ata.h  ata_formula.h
src/search/include/search/: adapter.h  adapter_symmetry.h  search.h  search_tree.h  symmetry_verify.hpp  ta_adapter.h  ta_adapter_symmetry.h
src/ta_to_graph_symmetry/: CMakeLists.txt  na_use.cpp  ta_to_graph_symmetry.cpp
src/ta_to_graph_symmetry/include/ta_to_graph_symmetry/: ata_conversor.hpp  automaton_compare.hpp  graph.hpp  graph_types.hpp  ta_conversor.hpp  ta_to_graph_symmetry.hpp
src/utilities/graphviz/: graph.cpp
src/utilities/graphviz/include/utilities/graphviz/: graphviz.h
test/: CMakeLists.txt  railroad.cpp  railroad_parallel.cpp  railroad_parallel.h  railroad_parallel_simple.cpp  railroad_parallel_simple.h  test_railroad.cpp
